--- a/bean/schools/templates/list_article_intro.html
+++ b/bean/schools/templates/list_article_intro.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+<input name="major" type="hidden" id="q_major" value="-1" />
 {% for article in articles %}
     <div class="blog margin-bottom-30">
     	<h3>{{ article.title }}</h3>
@@ -18,21 +19,28 @@
             <div class="blog-img"><img src="{% static article.pic %}" alt="" /></div>
         {% endif %}
         <p>{{ article.intro }}...</p>
-        <p><a class="btn-u btn-u-small" href="#">查看更多</a></p>
+        <p><a class="btn-u btn-u-small" href="/article?aid={{ article.id }}">查看更多</a></p>
     </div><!--/blog-->
+ {% empty %}
+ 	<div class="blog margin-bottom-30">
+ 		<h3>该专业暂无提供任何内容</h3>
+ 		<p>我们会尽快更新并添加的，望见谅！</p>
+ 	</div><!--/blog-->
 {% endfor %}
 
-<div class="pagination pagination-centered">
+{% if page_list %}
+<div class="pagination pagination-centered" id="pagination">
 	<ul>
-        <li class="disabled"><a href="#">Prev</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li class="active"><a>3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">7</a></li>
-        <li><a href="#">8</a></li>
-        <li><a href="#">Next</a></li>
+        {% for page in page_list %}
+        	{% if forloop.first %} 
+        		<li {% ifequal page current_page %} class="disabled"{% endifequal %}><a href="javascript:void(0);" onclick="paginationOnClick(this.id);" id="pre">上一页</a></li>
+        	{% endif %}
+        	<li {% ifequal page current_page %} class="active" {% endifequal %}><a href="javascript:void(0);" onclick="paginationOnClick(this.id);" id={{ page }}>{{ page }}</a></li>
+        	{% if forloop.last %} 
+        		<li {% ifequal page current_page %} class="disabled"{% endifequal %}><a href="javascript:void(0);" onclick="paginationOnClick(this.id);" id="next">下一页</a></li>
+        	{% endif %}
+        {% endfor %}
+        <input name="major" type="hidden" id="current_page" value="{{ current_page }}" />
      </ul>
 </div>
+{% endif %}
